[package]
name = "crypto_example"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
rusqlite = { version = "0.35", features = ["bundled"] }
sha2 = "0.10.9"
hex = "0.4.3"
rand = "0.8.5"
argon2 = "0.5.3"